--- a/app/src/main/res/layout/activity_get_connectivity_data.xml
+++ b/app/src/main/res/layout/activity_get_connectivity_data.xml
@@ -21,14 +21,15 @@
 
     <Button
         android:id="@+id/btParar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:text="Parar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/rounded_button"
         app:layout_constraintTop_toBottomOf="@+id/rvDados" />
 </androidx.constraintlayout.widget.ConstraintLayout>
